--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
+    
+    <style>
+        #body{
+            background-color: orange;
+        }
+        a{
+            padding: 10px;
+        }
+
+    </style>
 </head>
-<body>
+<body id="body">
     <h1>This is Our About Page</h1>
+    <p>Capacity Bay vision is not only to create information technology <br> 
+        jobs and careers for people in transition and poverty but <br>
+         to facilitate economic and social opportunity for them and their families.
+    </p>
+    <p>
+        At CapacityBay, Inc., we embrace and foster the following core values <br> 
+        which also values reflect and support our mission: Hard work, Punctuality, <br>
+         Respect, Cooperation and collaboration, Partnership, Diversity, Tolerance, 
+         <br> Teamwork, Research, Equity.
+    </p>
+
+    <a href="/index.html">Go back to Home Page</a>
+    <a href="/pages/services.html">See Our Services</a>
+    <a href="/pages/contact.html">Go to Contact</a>
 </body>
 </html>
