--- a/pages/services.html
+++ b/pages/services.html
@@ -11,7 +11,7 @@
         *{
             background-color: grey;
         }
-        ol li{
+        ol,li{
             background-color: cyan;
         }
     </style>
@@ -24,5 +24,9 @@
         <li>Devops Training</li>
         <li>Splunk Training</li>
     </ol>
+
+    <a href="/index.html">Go back to Home Page</a>
+    <a href="/pages/about.html">Go to About Page</a>
+    <a href="/pages/contact.html">Go to Contact</a>
 </body>
 </html>
