--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./all_css/style.css">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="/all_css/style.css">
 </head>
 <body>
     <h1 style="color: red;">Welcome to CSS</h1>
-    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere.</p>
+    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere. <br>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere. <br>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere.
+    <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere.
+<br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere.
+<br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere.
+<br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere.</p>
 
     <ul>
         <li><a href="/pages/services.html">Services</a></li>
