--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
-    <link rel="stylesheet" href="/all_css/contact.css">
+    <link rel="stylesheet" href="all_css/contact.css">
 </head>
 <body>
     <h1>This is Our Contact Page</h1>
@@ -41,7 +41,7 @@
 
     </form>
 
-    <a href="/index.html">Go back to Home Page</a>
+    <a href="index.html">Go back to Home Page</a>
     <a href="/pages/about.html">Go to About Page</a>
     <a href="/pages/services.html">See Our Services</a>
 </body>
