--- a/pages/services.html
+++ b/pages/services.html
@@ -29,7 +29,7 @@
         <li>Splunk Training</li>
     </ol>
 
-    <a href="/index.html">Go back to Home Page</a>
+    <a href="index.html">Go back to Home Page</a>
     <a href="/pages/about.html">Go to About Page</a>
     <a href="/pages/contact.html">Go to Contact</a>
 </body>
