--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
         jobs and careers for people in transition and poverty but <br>
          to facilitate economic and social opportunity for them and their families.
     </p>
-    
+
     <p>
         At CapacityBay, Inc., we embrace and foster the following core values <br> 
         which also values reflect and support our mission: Hard work, Punctuality, <br>
@@ -31,7 +31,7 @@
          <br> Teamwork, Research, Equity.
     </p>
 
-    <a href="/index.html">Go back to Home Page</a>
+    <a href="index.html">Go back to Home Page</a>
     <a href="/pages/services.html">See Our Services</a>
     <a href="/pages/contact.html">Go to Contact</a>
 </body>
