--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quisquam architecto repellat cumque, dignissimos exercitationem, debitis porro maxime, animi aspernatur fugiat! Aliquam quos sunt accusamus excepturi quis, exercitationem inventore facere.</p>
 
     <ul>
-        <li><a href="/pages/services.html">Services</a></li>
-        <li><a href="/pages/contact.html">Contact</a></li>
-        <li><a href="/pages/about.html">About</a></li>
+        <li><a href="pages/services.html">Services</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
+        <li><a href="pages/about.html">About</a></li>
     </ul>
 </body>
 </html>
