--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
     </form>
 
     <a href="index.html">Go back to Home Page</a>
-    <a href="/pages/about.html">Go to About Page</a>
-    <a href="/pages/services.html">See Our Services</a>
+    <a href="pages/about.html">Go to About Page</a>
+    <a href="pages/services.html">See Our Services</a>
 </body>
 </html>
