--- a/pages/services.html
+++ b/pages/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
 </head>
 <body>
     <style>
@@ -30,7 +30,7 @@
     </ol>
 
     <a href="index.html">Go back to Home Page</a>
-    <a href="/pages/about.html">Go to About Page</a>
-    <a href="/pages/contact.html">Go to Contact</a>
+    <a href="pages/about.html">Go to About Page</a>
+    <a href="pages/contact.html">Go to Contact</a>
 </body>
 </html>
