--- a/pages/about.html
+++ b/pages/about.html
@@ -32,7 +32,7 @@
     </p>
 
     <a href="index.html">Go back to Home Page</a>
-    <a href="pages/services.html">See Our Services</a>
-    <a href="pages/contact.html">Go to Contact</a>
+    <a href="../pages/services.html">See Our Services</a>
+    <a href="../pages/contact.html">Go to Contact</a>
 </body>
 </html>
