--- a/pages/services.html
+++ b/pages/services.html
@@ -30,7 +30,7 @@
     </ol>
 
     <a href="index.html">Go back to Home Page</a>
-    <a href="pages/about.html">Go to About Page</a>
-    <a href="pages/contact.html">Go to Contact</a>
+    <a href="../pages/about.html">Go to About Page</a>
+    <a href="../pages/contact.html">Go to Contact</a>
 </body>
 </html>
